# configurer

./: README.md  TODO.md  configurer.spec  pyproject.toml
.github/workflows/: build-release.yml
data/: installer-args.csv  registry-values.csv
scripts/: run-app.py
src/configurer/: __init__.py  __main__.py  app.py  bitlocker.py  console.py  errors.py  reg.py  window.py
test/: test_reg.py
